Moved FB integration to back-end

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,236 +1,150 @@
-<!DOCTYPE html>
-<html xmlns:fb="http://ogp.me/ns/fb#" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes" />
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
 
-    <title><%= @app['name'] %></title>
-    <link rel="stylesheet" href="stylesheets/screen.css" media="Screen" type="text/css" />
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-width: 480px), only screen and (max-device-width: 480px)" type="text/css" />
+<title>Headto: Tell your friends where you are heading</title>
 
-    <!--[if IEMobile]>
-    <link rel="stylesheet" href="mobile.css" media="screen" type="text/css"  />
-    <![endif]-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Tell your friends where you are heading.">
+<meta name="keywords" content="ip, ip address, geolocation, hostname, my ip, address, ip geo">
 
-    <!-- These are Open Graph tags.  They add meta data to your  -->
-    <!-- site that facebook uses when your content is shared     -->
-    <!-- over facebook.  You should fill these tags in with      -->
-    <!-- your data.  To learn more about Open Graph, visit       -->
-    <!-- 'https://developers.facebook.com/docs/opengraph/'       -->
-    <meta property="og:title" content="<%= @app['name'] %>" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="<%= url %>" />
-    <meta property="og:image" content="<%= url('/logo.png') %>" />
-    <meta property="og:site_name" content="<%= @app['name'] %>" />
-    <meta property="og:description" content="My First App" />
-    <meta property="fb:app_id" content="<%= @app['name'] %>" />
+<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+<link href="stylesheets/headto.css" rel="stylesheet">
 
-    <script type="text/javascript" src="/javascripts/jquery-1.7.1.min.js"></script>
+<script type="application/javascript" src="javascripts/microajax.js"></script>
 
-    <script type="text/javascript">
-      function logResponse(response) {
-        if (console && console.log) {
-          console.log('The response was', response);
-        }
-      }
+<script type="application/javascript">
 
-      $(function(){
-        // Set up so we handle click on the buttons
-        $('#postToWall').click(function() {
-          FB.ui(
-            {
-              method : 'feed',
-              link   : $(this).attr('data-url')
-            },
-            function (response) {
-              // If response is null the user canceled the dialog
-              if (response != null) {
-                logResponse(response);
-              }
-            }
-          );
+var my_coord = "";
+var venue_results;
+
+function getIP(res) {
+    my_coord = res.loc;
+    //document.getElementById("my_location").innerHTML = "<img src='https://maps.googleapis.com/maps/api/staticmap?center=" + my_coord + "&zoom=15&size=640x200&sensor=false'></img>"
+}        
+
+function category(objectty) {
+    if(objectty.length)
+        return objectty[0].name;
+    else
+        return "";
+}
+function hitFoursquareAPI(query) {
+
+    var locationParameter;
+    if (my_coord == "") {
+        locationParameter = "intent=global";
+    } else {
+        locationParameter = "ll=" + my_coord;
+    };
+            
+    microAjax("https://api.foursquare.com/v2/venues/search?" +
+        "client_id=EBA5MTZIPRVHNGKU2RB4KZ45J2BAOZFSYIXHGYBGR1KIXFIQ&"+
+        "client_secret=K0CBX5TQKHNEB35MGT3NNIVLWP0C4L0CQQ4UP3C2LUSLQL0W&"+
+        "query=" + query + "&"+
+        "v=20130725&"+
+        "limit=5&" + locationParameter, function (res) {
+            venue_results = eval ("(" + res + ")");
+            var insert_string = "<table class='table table-striped'>";
+            venue_results.response.venues.forEach( function(venue) {
+                   
+            post_location = venue.canonicalUrl;
+            insert_string += "<tr>";
+            
+            insert_string += "<td><img src='http://maps.googleapis.com/maps/api/staticmap?center=";
+            insert_string += venue.location.lat + "," + venue.location.lng;
+            insert_string += "&markers=color:blue%7C" + venue.location.lat + "," + venue.location.lng;
+            insert_string += "&zoom=15&size=300x100&sensor=false'></td>";
+            
+            insert_string += "<td><b><a href='" + venue.canonicalUrl + "'>" + venue.name;
+            insert_string += "</a></b><br>" + category(venue.categories) + "<br>";
+            insert_string += venue.location.address + ", " + venue.location.city + ".";
+      
+            insert_string += "<br><br><br>" + "<form action='postAction/" + venue.id + "' method=get> <input type=submit value='Tell your friends'></form>" + "</td>";
+
+            insert_string += "</tr>";                 
         });
+        insert_string += "</table>";
+        document.getElementById("result").innerHTML = insert_string;
+    });
+}
 
-        $('#sendToFriends').click(function() {
-          FB.ui(
-            {
-              method : 'send',
-              link   : $(this).attr('data-url')
-            },
-            function (response) {
-              // If response is null the user canceled the dialog
-              if (response != null) {
-                logResponse(response);
-              }
-            }
-          );
-        });
+</script>
+<script>
 
-        $('#sendRequest').click(function() {
-          FB.ui(
-            {
-              method  : 'apprequests',
-              message : $(this).attr('data-message')
-            },
-            function (response) {
-              // If response is null the user canceled the dialog
-              if (response != null) {
-                logResponse(response);
-              }
-            }
-          );
-        });
-      });
-    </script>
 
-    <!--[if IE]>
-      <script type="text/javascript">
-        var tags = ['header', 'section'];
-        while(tags.length)
-          document.createElement(tags.pop());
-      </script>
-    <![endif]-->
-  </head>
-  <body>
-    <div id="fb-root"></div>
-    <script type="text/javascript">
-      window.fbAsyncInit = function() {
-        FB.init({
-          appId      : "<%= @app['id'] %>",                     // App ID
-          channelUrl : "<%= url_no_scheme('/channel.html') %>", // Channel File
-          status     : true,                                    // check login status
-          cookie     : true,                                    // enable cookies to allow the server to access the session
-          xfbml      : true                                     // parse XFBML
-        });
+function postToFB(location_id) {
 
-        // Listen to the auth.login which will be called when the user logs in
-        // using the Login button
-        FB.Event.subscribe('auth.login', function(response) {
-          // We want to reload the page now so Ruby can read the cookie that the
-          // Javascript SDK sat. But we don't want to use
-          // window.location.reload() because if this is in a canvas there was a
-          // post made to this page and a reload will trigger a message to the
-          // user asking if they want to send data again.
-          window.location = window.location;
-        });
+}
 
-        FB.Canvas.setAutoGrow();
-      };
+</script>
 
-      // Load the SDK Asynchronously
-      (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/all.js";
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
+</head>
+<body>
 
-    <header class="clearfix">
-      <% if @user %>
-          <p id="picture" style="background-image: url(https://graph.facebook.com/<%= @user['id'] %>/picture?type=normal)"></p>
-          <div>
-            <h1>Welcome, <strong><%= @user['name'] %></strong></h1>
-            <p class="tagline">
-              This is your app
-              <a href="<%= @app['@app'] %>"><%= @app['name'] %></a>
-            </p>
-            <div id="share-app">
-              <p>Share your app:</p>
-              <ul>
-                <li>
-                  <a href="#" class="facebook-button" id="postToWall" data-url="<%= url %>">
-                    <span class="plus">Post to Wall</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="facebook-button speech-bubble" id="sendToFriends" data-url="<%= url %>">
-                    <span class="speech-bubble">Send Message</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="facebook-button apprequests" id="sendRequest" data-message="Test this awesome app">
-                    <span class="apprequests">Send Requests</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-      <% else %>
-        <div>
-          <h1>Welcome</h1>
-          <div class="fb-login-button" data-scope="<%= FACEBOOK_SCOPE %>">Log In</div>
+<div id="fb-root"></div>
+<script type="text/javascript">
 
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : 479332218823511,        // App ID
+      status     : true,           // check login status
+      cookie     : true,           // enable cookies to allow the server to access the session
+      xfbml      : false            // parse page for xfbml or html5 social plugins like login button below
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/all.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+
+</script>
+
+<div
+  class="fb-login-button"
+  data-show-faces="true"
+  data-width="200"
+  data-max-rows="1"
+  data-scope="publish_actions">
+</div>
+
+<div id="result-fb"></div>
+
+<div class="container-narrow">
+
+    <div class="masthead">
+        <div class="pull-right">
+            <br><p class="muted">Tell your friends where you are heading.</p>
         </div>
+        <h1 class="muted">&#10548; Headto</h1>
+    </div>
+    <hr>
 
-      <% end %>
-    </header>
-    <section>
-      <% @response.each do |key, value| %>
-        <li><%= "#{key.to_s} : #{value.to_s}" %></li>
-      <% end %>
-    </section>
 
-    <% if @user %>
-    <section id="samples" class="clearfix">
-          <h1>Examples of the Facebook Graph API</h1>
+    <div class="jumbotron">
+        <br>
+        <input type="text" name="query" placeholder="Where are you heading today?" style="font-size: 1.5em; height: 20px; width: 60%; padding: 10px;" onkeyup="hitFoursquareAPI(this.value);" autocomplete="off"/>
+        <br><br>
 
-          <div class="list">
-            <h3>A few of your friends</h3>
-            <ul class="friends">
-              <% @friends.each do |friend| %>
-                <li>
-                  <a href="#" onclick="window.open('http://www.facebook.com/<%= friend['id']%>')">
-                    <img src="https://graph.facebook.com/<%= friend['id'] %>/picture?type=square" alt="<%= friend['name'] %>">
-                    <%= friend['name'] %>
-                  </a>
-                </li>
-              <% end %>
-            </ul>
-          </div>
+        <div id="my_location" style="position: relative"></div>
+        <span id="result"></span>
+      
+    </div>
 
-          <div class="list inline">
-            <h3>Recent photos</h3>
-            <ul class="photos">
-              <% @photos.each_with_index do |photo, index| %>
-                <li style="background-image: url(<%= photo['picture'] %>)" class='<%= 'first-column' if (index%4).zero? %>'>
-                  <a href="#" onclick="window.open('http://www.facebook.com/<%= photo['id'] %>')">
-                    <%= photo['name'] %>
-                  </a>
-                </li>
-              <% end %>
-            </ul>
-          </div>
+    <div class="footer">
+        <hr/>
+        <p class="muted pull-right">&#10548; Headto</p>
+        <p class="muted">Get the <a href="http://github.com/paramaggarwal/headto">code</a>.
+        Location data by <a href="http://foursquare.com">Foursquare</a>.</p>
+    </div>
 
-          <div class="list">
-            <h3>Things you like</h3>
-            <ul class="things">
-              <% @likes.each do |like| %>
-                <li>
-                  <a href="#" onclick="window.open('http://www.facebook.com/<%= like['id'] %>')">
-                    <img src="https://graph.facebook.com/<%= like['id'] %>/picture?type=square" alt="<%= like['name'] %>">
-                    <%= like['name'] %>
-                  </a>
-                </li>
-              <% end %>
-            </ul>
-          </div>
+</div>
+<script type="application/javascript" src="http://ipinfo.io/?callback=getIP"></script>
 
-          <div class="list">
-            <h3>Friends using this app</h3>
-            <ul class="friends">
-              <% @friends_using_app.each do |friend_result| %>
-                <li>
-                  <a href="#" onclick="window.open('http://www.facebook.com/<%= friend_result['uid'] %>')">
-                    <img src="<%= friend_result['pic_square'] %>" alt="<%= friend_result['name'] %>">
-                    <%= friend_result['name'] %>
-                  </a>
-                </li>
-              <% end %>
-            </ul>
-          </div>
-        </section>
-    <% end %>
-  </body>
 </html>
+
