--- a/views/location.erb
+++ b/views/location.erb
@@ -3,7 +3,7 @@
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# headtoapp: http://ogp.me/ns/fb/headtoapp#">
   	<meta property="fb:app_id"                content="479332218823511" /> 
   	<meta property="og:type"                  content="headtoapp:venue" /> 
-  	<meta property="og:url"                   content="https://head-to.herokuapp.com/object/<%= @location.id %>" /> 
+  	<meta property="og:url"                   content="https://headtoapp.herokuapp.com/object/<%= @location.id %>" /> 
   	<meta property="og:title"                 content="<%= @location.name %>" /> 
   	<meta property="og:image"                 content="<%= @location.photos.groups[1].items[0].url %>" /> 
   	<meta property="place:location:latitude"  content="<%= @location.location.lat %>" /> 
