http[s] for assets

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
 <meta name="description" content="Tell your friends where you are heading.">
 <meta name="keywords" content="ip, ip address, geolocation, hostname, my ip, address, ip geo">
 
-<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
 <link href="stylesheets/headto.css" rel="stylesheet">
 
 <script type="application/javascript" src="javascripts/microajax.js"></script>
@@ -144,7 +144,7 @@ function postToFB(location_id) {
     </div>
 
 </div>
-<script type="application/javascript" src="http://ipinfo.io/?callback=getIP"></script>
+<script type="application/javascript" src="//ipinfo.io/?callback=getIP"></script>
 
 </html>
 
