--- a/views/venues.erb
+++ b/views/venues.erb
@@ -1,20 +1,23 @@
-<table class='table table-striped'>
+<table class='table table-hover'>
   <% for @venue in @venues %>
-    <tr>
+    <tr style="margin: 2px;">
       <td>
-        <img src="//maps.googleapis.com/maps/api/staticmap?center=<%= @venue.location.lat %>,<%= @venue.location.lng %>&markers=color:blue%7C<%= @venue.location.lat %>,<%= @venue.location.lng %>&zoom=15&size=300x100&sensor=false">
-      </td>
-      <td>
-        <b><a href="<%= @venue.canonicalUrl %>"><%= @venue.name %></a></b>
-        <br>
-        <%= @venue.categories[0].name %>
-        <br>
-        <%= @venue.location.address %>, <%= @venue.location.city %>.
-        <br>
-        <br>
-        <br>
+
+        <% # Dirty code to offset the markers to the left %>
+        <% shifted_longitude = @venue.location.lng.to_f %>
+        <% shifted_longitude = shifted_longitude - 0.015 %>
+        <% shifted_longitude = shifted_longitude.to_s %>
+        
+      <div style="background-image:url('//a.tiles.mapbox.com/v3/paramaggarwal.map-mkz04dpf/pin-m-star(<%= @venue.location.lng %>,<%= @venue.location.lat %>)/<%= shifted_longitude %>,<%= @venue.location.lat %>,14/600x200.png'); width: 600px; height: 200px;">
+        <div style="padding: 10px; margin-left: 50px; background-color: #fff; width: 200px; opacity: 0.8; border-radius: 0 0 15px 15px; ">
+          <h4><a href="<%= @venue.canonicalUrl %>"><%= @venue.name %></a></h4>
+          <strong><%= @venue.categories[0].name %></strong>
+          <p><%= @venue.location.address %>, <%= @venue.location.city %>.</p>
+          <br>
+        </div>  
         <script>showFBLoginButton(<%= @venue.id %>);</script>
-      </td>
+      </div>
+    </td>
     </tr>
   <% end %>  
 </table>
